--- a/package.json
+++ b/package.json
@@ -7,17 +7,26 @@
   "scripts": {
     "build": "tsc",
     "test": "NODE_ENV=test jest --rootDir ./src",
-    "start": "nodemon --exec ts-node src/server.ts",
-    "start-staging": "node ./build/server.js"
+    "lint": "eslint src/**/*.ts",
+    "start": "nodemon",
+    "start-staging": "node ./build/server.js",
+    "test-staging": "NODE_ENV=test jest --rootDir ./build"
   },
   "devDependencies": {
     "@jest/types": "^27.4.2",
+    "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.11",
     "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.4.3",
     "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.1.6",
     "ts-jest": "^27.1.0",
@@ -25,6 +34,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.17.1"
   }
 }
